--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   camera: ^0.5.5
+  http: ^0.12.0
+  torch:
 
 dev_dependencies:
   flutter_test:
